--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/evgeniya-osmakova/frontend-project-lvl1#readme",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
